# pretix-enablebanking

./: .gitignore  MANIFEST.in  README.md  devenv.nix  flake.nix  manage.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pretix_enablebanking/: __init__.py  apps.py  enablebanking_client.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
src/pretix_enablebanking/migrations/: 0001_initial.py  0002_account_state_and_import_job.py  0002_enablebankingimportjob.py  0003_enablebankingconnection_auth_state.py  0004_account_unique_constraint.py
src/pretix_enablebanking/templates/pretix_enablebanking/: import.html
tests/: __init__.py  conftest.py  settings.py  test_enablebanking_client.py  test_forms.py  test_import.py  test_models_and_apps.py  test_signals.py  test_tasks.py  test_views.py
