[build-system]
requires = ["setuptools", "pretix-plugin-build"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-enablebanking"
version = "1.0.4"
description = "Automatically import bank transactions via Enable Banking (PSD2/Open Banking) into pretix"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pretix>=2.7.0",
    "requests>=2.32.0",
]
authors = [
    {name = "Nico Knoll", email = "mail@nico.is"},
]
keywords = ["pretix", "enablebanking", "open-banking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.9.1",
    "pretix>=2026.3.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-django>=4.0",
    "ruff>=0.1",
    "ty>=0.0.29",
]

[project.urls]
Homepage = "https://github.com/nicoknoll/pretix-enablebanking"
Repository = "https://github.com/nicoknoll/pretix-enablebanking"

[project.entry-points."pretix.plugin"]
pretix_enablebanking = "pretix_enablebanking:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
pretix_enablebanking = [
    "locale/*/LC_MESSAGES/*",
    "static/pretix_enablebanking/*",
    "templates/pretix_enablebanking/*",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pretix*"]
namespaces = false

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
all = "error"
# Django model managers and exception classes are added dynamically.
unresolved-attribute = "ignore"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes (unused imports, variables, etc.)
    "I",      # isort
    "W",      # pycodestyle warnings
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie (misc lints)
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
]
ignore = [
    "RUF005",  # Consider iterable unpacking - common pattern in pretix plugins
]

[tool.ruff.lint.per-file-ignores]
# Plugin code overrides base class methods, so unused args are expected
"src/pretix_enablebanking/*.py" = ["ARG002"]
# Django signals and Celery tasks require sender/self and kwargs arguments
"src/pretix_enablebanking/signals.py" = ["ARG001"]
"src/pretix_enablebanking/tasks.py" = ["ARG001"]
# Django migrations are generated code
"src/pretix_enablebanking/migrations/*.py" = ["E501", "RUF012"]
# Keep the en dash in displayed account names
"src/pretix_enablebanking/views.py" = ["RUF001"]
# Test files: imports after env setup, star imports from pretix settings, unused vars in fixtures
"tests/*.py" = ["ARG001", "ARG005", "E402", "F403", "F405", "F841", "RUF059"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["pretix_enablebanking"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version_files = [
    "src/pretix_enablebanking/__init__.py:__version__",
    "flake.nix:version",
]
tag_format = "v$version"
update_changelog_on_bump = false
annotated_tag = true
gpg_sign = true
bump_message = "release: $new_version"
